# fredis

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  fredis.sublime-project
include/fredis/: FredisError.h  RedisClient.h  RedisError.h  RedisRequestContext.h  RedisResponse.h  macros.h
include/fredis/folly_util/: EBThread.h  folly_util.h
include/fredis/memcached/: MemcachedConfig.h  MemcachedError.h  MemcachedSyncClient.h
include/fredis/redis/: RedisClient.h  RedisDynamicResponse.h  RedisError.h  RedisRequestContext.h  RedisResponse.h  RedisSubscription.h
include/fredis/redis/hiredis_adapter/: hiredis_adapter.h
scripts/: deps.sh
src/: main.cpp
src/fredis/: FredisError.cpp  RedisClient.cpp  RedisRequestContext.cpp  RedisResponse.cpp
src/fredis/integration_tests/: memcached_sync_integration.cpp  redis_integration.cpp
src/fredis/memcached/: MemcachedConfig.cpp  MemcachedSyncClient.cpp
src/fredis/redis/: RedisClient.cpp  RedisDynamicResponse.cpp  RedisRequestContext.cpp  RedisResponse.cpp  RedisSubscription.cpp
src/fredis/redis/hiredis_adapter/: hiredis_adapter.cpp
